--- a/src/components/layout/layout.sass
+++ b/src/components/layout/layout.sass
@@ -10,10 +10,9 @@
 
 body
     background-color: color.$neitral-1
-    min-width: 100vw
     min-height: 100vh
     display: flex
     justify-content: center
 
 .container
-    min-width: 1200px
+    max-width: 1200px
