--- a/src/components/button/button.sass
+++ b/src/components/button/button.sass
@@ -13,10 +13,10 @@
     font-family: Arial, Helvetica, sans-serif
     color: color.$neitral-4
     background-color: color.$neitral-2
-    transition-property: background-color, color
     transition-duration: animation.$baseDuration
 
     &--primary
+        transition-property: background-color
         color: color.$neitral-4
         background-color: color.$neitral-2
         border-radius: 1.2rem
@@ -26,9 +26,22 @@
             background-color: color.$accent
 
     &--stretched
+        transition-property: border, color, background-color
         flex: 1
         border-radius: 0
         border-bottom: 2px solid transparent
 
         &:hover
             border-bottom: 2px solid color.$additional
+            background-color: color.$neitral-3
+            color: color.$neitral-1
+
+    &--ghost
+        background-color: transparent
+        color: color.$neitral-3
+
+        &:hover
+            color: color.$primary
+
+    &--active
+        color: color.$primary
