--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,12 +1,18 @@
 extends /src/components/layout/layout.pug
 include /src/components/button/button.pug
 include /src/components/header/header.pug
+include /src/components/slider/slider.pug
+include /src/components/divider/divider.pug
+include /src/components/news/news.pug
 
 block title 
     title INDEX 
 
 block content 
     +header()
-    main Main 
+    main
+        +slider()  
+        +divider()
+        +news()
     footer Footer
     
