--- a/src/components/button/button.sass
+++ b/src/components/button/button.sass
@@ -43,5 +43,21 @@
         &:hover
             color: color.$primary
 
+    &--outline
+        background-color: transparent
+        color: color.$primary
+        border: 1px solid color.$neitral-3
+        border-radius: 0
+        max-width: 3.2rem
+        max-height: 3.2rem
+
+        &.button--active
+            background-color: color.$primary
+            color: color.$neitral-1
+
+        &:hover
+            background-color: color.$primary
+            color: color.$neitral-1
+
     &--active
         color: color.$primary
