add merge sass in one file

--- a/src/components/news/news.sass
+++ b/src/components/news/news.sass
@@ -23,3 +23,8 @@
     &__row
         display: flex
         flex-wrap: wrap
+
+    &__pagination
+        display: flex
+        padding: 1.2rem 0
+        flex-direction: row-reverse
