--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,5 +1,4 @@
 extends /src/components/layout/layout.pug
-include /src/components/button/button.pug
 include /src/components/header/header.pug
 include /src/components/slider/slider.pug
 include /src/components/divider/divider.pug
@@ -7,6 +6,9 @@ include /src/components/news/news.pug
 
 block title 
     title INDEX 
+
+block css 
+    link(rel="stylesheet", href="/src/pages/index.sass")
 
 block content 
     +header()
