bug fixing? relise cards, news

--- a/src/components/logo/logo.pug
+++ b/src/components/logo/logo.pug
@@ -3,6 +3,6 @@ mixin logo(withText)
         img(src="/src/assets/logo.svg" alt="").logo__img
 
         if withText
-            span.logo__text МБОУ Хадабулакская основная общеобразовательная школа 
+            span.title МБОУ Хадабулакская основная общеобразовательная школа 
         
 
