--- a/src/styles/color.sass
+++ b/src/styles/color.sass
@@ -5,3 +5,5 @@ $neitral-1: #EEEEEE
 $neitral-2: #E0E0E0
 $neitral-3: #A0A0A0
 $neitral-4: #292929
+
+$gradient-1: linear-gradient(140deg, #d9eaa4, #d8ebf2, #9bb298)
