--- a/src/styles/typography.sass
+++ b/src/styles/typography.sass
@@ -13,7 +13,7 @@
         font-size: 1.8rem
 
 
-.paragraph
+.text
     font-family: Arial, Helvetica, sans-serif
     font-size: 1.6rem
     color: color.$neitral-4
@@ -32,6 +32,9 @@
 
     &--superSmall
         font-size: 1.2rem
-    
+
+.link
+    font-size: 1.2rem
+    color: color.$primary
 
     
