--- a/src/components/news/news.sass
+++ b/src/components/news/news.sass
@@ -2,23 +2,11 @@
 @import '../../styles/typography'
 
 .news
-    &__menu
+    &__header
         display: flex
-        justify-content: flex-start
+        justify-content: space-between
         align-items: center
-
-    &__title
-        @extend .title
-        color: color.$neitral-4
-        margin-top: 2.4rem
-        margin-bottom: 2.4rem
-
-    &__allNews
-        @extend .paragraph
-        @extend .paragraph--small
-        margin-left: auto
-        text-decoration: none
-        color: color.$primary
+        margin: 1.2rem 0
 
     &__row
         display: flex
@@ -26,5 +14,5 @@
 
     &__pagination
         display: flex
-        padding: 1.2rem 0
+        padding-top: 1.2rem
         flex-direction: row-reverse
