--- a/src/components/divider/divider.sass
+++ b/src/components/divider/divider.sass
@@ -2,5 +2,6 @@
 
 .divider
     height: 2.4rem
-    background: color.$accent
+    background-color: color.$accent
+    background-image: url(/src/assets/dividerBg.png)
     margin: 1.2rem 0
