--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -7,20 +7,20 @@ mixin header()
             +logo(true)
             +menu(
                 "primary",
-                {text: "RU", icon: "/src/assets/arrow.svg", alt: "Сменить язык"},
-                {text: "", icon: "/src/assets/eye.svg", alt: "Режим для слабовидящих"},
-                {text: "Личный кабинет", icon: "", alt: ""},
-                {text: "Сервисы", icon: "/src/assets/arrow.svg", alt: "Сервисы"},
-                {text: "Школьникам", icon: "", alt: ""},
-                {text: "Родителям", icon: "", alt: ""},
+                {text: "RU", icon: "arrow"},
+                {text: "", icon: "eye"},
+                {text: "Личный кабинет"},
+                {text: "Сервисы", icon: "arrow"},
+                {text: "Школьникам"},
+                {text: "Родителям"},
             )
 
         .header__down-section 
             +menu(
                 "stretched",
-                {text: "Школа", icon: "", alt: ""},
-                {text: "Питание", icon: "", alt: ""},
-                {text: "Спортивный клуб СТАРТ", icon: "", alt: ""},
+                {text: "Школа"},
+                {text: "Питание"},
+                {text: "Спортивный клуб СТАРТ"},
 
             )
 
