--- a/src/components/logo/logo.pug
+++ b/src/components/logo/logo.pug
@@ -1,6 +1,6 @@
 mixin logo(withText)
     .logo 
-        img(src="/src/assets/logo.svg" alt="").logo__img
+        img(src="/src/assets/logo.svg" alt="Логотип школы").logo__img
 
         if withText
             span.title МБОУ Хадабулакская основная общеобразовательная школа 
