--- a/src/components/newsCard/newsCard.sass
+++ b/src/components/newsCard/newsCard.sass
@@ -38,3 +38,9 @@
 
         & > span
             color: color.$neitral-3
+
+        & > svg
+            max-width: 2.4rem
+            max-height: 2.4rem
+            fill: none
+            stroke: color.$neitral-3
