--- a/src/components/pagination/pagination.pug
+++ b/src/components/pagination/pagination.pug
@@ -1,7 +1,7 @@
 mixin pagination(num)
     - let n = 2
     .pagination
-        +button("outline", "1", "", "", true)
+        +button("outline", "1", "", true)
         
         while n < num
             if (n <= 3)
