--- a/src/components/timetable/timetable.pug
+++ b/src/components/timetable/timetable.pug
@@ -39,7 +39,7 @@ mixin timetable()
                 input(type="text" name="timetable").timetable__input
         .timetable__bar 
             .timetable__filter
-                +button('ghost', 'Сегодня', '', '', true)
+                +button('ghost', 'Сегодня', '', true)
                 +button('ghost', 'Завтра')
             a(href="#").link Расписание на неделю
         .timetable__body 
