--- a/src/styles/components.sass
+++ b/src/styles/components.sass
@@ -12,3 +12,4 @@
 @import '/src/components/timetableCard/timetableCard.sass'
 @import '/src/components/navCard/navCard.sass'
 @import '/src/components/navCards/navCards.sass'
+@import '/src/components/contacts/contacts.sass'
