--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,5 +1,3 @@
-@import '../styles/color'
-@import '../styles/animation'
+@import '../styles/svg'
 @import '../styles/typography'
-    
 @import '../styles/components'
