--- a/src/components/button/button.sass
+++ b/src/components/button/button.sass
@@ -1,5 +1,6 @@
 @use '../../styles/color'
 @use '../../styles/animation'
+
 .button
     display: flex
     justify-content: center
@@ -14,6 +15,17 @@
     color: color.$neitral-4
     background-color: color.$neitral-2
     transition-duration: animation.$baseDuration
+
+    &:hover
+
+        color: color.$neitral-1
+
+        svg
+            stroke: color.$neitral-1
+
+    &__icon
+        max-width: 1.8rem
+        max-height: 1.8rem
 
     &--primary
         transition-property: background-color
