--- a/src/components/menu/menu.pug
+++ b/src/components/menu/menu.pug
@@ -1,7 +1,7 @@
 include /src/components/button/button.pug
 
-mixin menu(variant="primary", ...list)
+mixin menu(variant, ...list)
     - const variantClass = `menu menu--${variant}`
     nav(class=variantClass)
         each item in list 
-            +button(variant, item.text, item.icon, item.alt, item.isActive)
+            +button(variant, item.text, item.icon, item.isActive)
