--- a/src/components/navCards/navCards.sass
+++ b/src/components/navCards/navCards.sass
@@ -1,4 +1,9 @@
 .navCards
-    display: grid
-    grid-template-columns: 1fr 1fr 
-    gap: 1.2rem
+
+    &__title
+        margin: 1.2rem 0
+
+    &__body
+        display: grid
+        grid-template-columns: 1fr 1fr
+        gap: 1.2rem
