--- a/src/components/timetable/timetable.sass
+++ b/src/components/timetable/timetable.sass
@@ -29,6 +29,8 @@
         display: flex
         flex-direction: column
         gap: 1.2rem
-
         max-height: 300px
         overflow-y: scroll
+
+    &__more
+        font-size: 1.6rem
