--- a/src/styles/typography.sass
+++ b/src/styles/typography.sass
@@ -34,7 +34,10 @@
         font-size: 1.2rem
 
 .link
-    font-size: 1.2rem
+    font-size: 1.6rem
     color: color.$primary
+
+    &--superSmall
+        font-size: 1.2rem
 
     
